# gestionLocCDCK17

./: CMakeLists.txt  Main.qml  main.cpp
modeles/: client.cpp  client.h  club.cpp  club.h  contrat.cpp  contrat.h  lignecontrat.cpp  lignecontrat.h  prestation.cpp  prestation.h
qml/: Main.qml
repositories/: clientrepository.cpp  clientrepository.h  clubrepository.cpp  clubrepository.h  contratrepository.cpp  contratrepository.h  lignecontratrepository.cpp  lignecontratrepository.h  prestationrepository.cpp  prestationrepository.h
utils/: databasemanager.cpp  databasemanager.h
